# Heaps_and_Zipf_laws_examination

./: HEAPS_law_CALCULATION.py  Heaps.py  Heaps_and_Zipf_laws.py  README.md  TM_zad2_KL.py  data_preprocessing.py  main_HZ.py  podpunkt_5.py  preproces_data.py  pyproject.toml
src/: Heaps_and_Zipf_laws.py  data_harvester.py  data_load.py  data_preprocesser.py  main.py  settings.py
