[tool.poetry]
name = "heaps-zipf-laws"
version = "0.1.0"
description = ""
authors = ["krzysztof <krzysztof.lingoo@gmail.com>"]
readme = "README.md"
packages = [{include = "heaps_zipf_laws"}]

[tool.poetry.dependencies]
python = "^3.8"
typing = ""
pandas = "^1.4.2"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
nltk = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
